--- a/chat-widget.html
+++ b/chat-widget.html
@@ -39,6 +39,9 @@
         const chatInput = document.getElementById('chat-input');
         const chatMessages = document.getElementById('chat-messages');
 
+        const OPENAI_API_KEY = 'your-openai-api-key'; // Replace with your ChatGPT API key
+        const API_URL = 'https://api.openai.com/v1/chat/completions';
+
         chatToggle.addEventListener('click', () => {
             chatBox.classList.toggle('hidden');
         });
@@ -47,18 +50,47 @@
             chatBox.classList.add('hidden');
         });
 
-        chatForm.addEventListener('submit', (e) => {
+        chatForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             const message = chatInput.value.trim();
             if (message) {
                 addMessage('user', message);
                 chatInput.value = '';
-                // Simulate helpdesk response
-                setTimeout(() => {
-                    addMessage('helpdesk', 'Thank you for your message. A helpdesk representative will respond shortly.');
-                }, 1000);
+                const response = await getChatGPTResponse(message);
+                if (response) {
+                    addMessage('helpdesk', response);
+                } else {
+                    addMessage('helpdesk', 'Sorry, I could not process your request.');
+                }
             }
         });
+
+        async function getChatGPTResponse(userMessage) {
+            try {
+                const response = await fetch(API_URL, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${OPENAI_API_KEY}`,
+                    },
+                    body: JSON.stringify({
+                        model: 'gpt-3.5-turbo',
+                        messages: [{ role: 'user', content: userMessage }],
+                    }),
+                });
+
+                const data = await response.json();
+                if (response.ok && data.choices && data.choices[0].message) {
+                    return data.choices[0].message.content;
+                } else {
+                    console.error('Error from OpenAI API:', data);
+                    return null;
+                }
+            } catch (error) {
+                console.error('Error fetching ChatGPT response:', error);
+                return null;
+            }
+        }
 
         function addMessage(sender, text) {
             const messageElement = document.createElement('div');
@@ -74,4 +106,3 @@
     </script>
 </body>
 </html>
-
