--- a/chat-widget.html
+++ b/chat-widget.html
@@ -3,106 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Widget</title>
+    <title>Chat Redirect</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
     <div id="chat-widget" class="fixed bottom-4 right-4">
-        <button id="chat-toggle" class="bg-blue-500 text-white rounded-full p-3 shadow-lg">
+        <button id="chat-redirect" class="bg-blue-500 hover:bg-blue-600 text-white rounded-full p-3 shadow-lg transition-colors duration-200">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
             </svg>
+            <span class="sr-only">Open Chat</span>
         </button>
-        <div id="chat-box" class="hidden bg-white rounded-lg shadow-xl w-80 h-96 flex flex-col">
-            <div class="bg-blue-500 text-white p-4 rounded-t-lg flex justify-between items-center">
-                <h3 class="font-bold">Helpdesk Chat</h3>
-                <button id="close-chat" class="text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-            <div id="chat-messages" class="flex-1 overflow-y-auto p-4"></div>
-            <form id="chat-form" class="p-4 border-t">
-                <div class="flex">
-                    <input type="text" id="chat-input" class="flex-1 border rounded-l-lg p-2" placeholder="Type your message...">
-                    <button type="submit" class="bg-blue-500 text-white rounded-r-lg p-2">Send</button>
-                </div>
-            </form>
-        </div>
     </div>
+
     <script>
-        const chatToggle = document.getElementById('chat-toggle');
-        const chatBox = document.getElementById('chat-box');
-        const closeChat = document.getElementById('close-chat');
-        const chatForm = document.getElementById('chat-form');
-        const chatInput = document.getElementById('chat-input');
-        const chatMessages = document.getElementById('chat-messages');
-
-        const OPENAI_API_KEY = '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'; // Replace with your ChatGPT API key
-        const API_URL = 'https://api.openai.com/v1/chat/completions';
-
-        chatToggle.addEventListener('click', () => {
-            chatBox.classList.toggle('hidden');
+        document.getElementById('chat-redirect').addEventListener('click', function() {
+            window.location.href = 'https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2';
         });
-
-        closeChat.addEventListener('click', () => {
-            chatBox.classList.add('hidden');
-        });
-
-        chatForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const message = chatInput.value.trim();
-            if (message) {
-                addMessage('user', message);
-                chatInput.value = '';
-                const response = await getChatGPTResponse(message);
-                if (response) {
-                    addMessage('helpdesk', response);
-                } else {
-                    addMessage('helpdesk', 'Sorry, I could not process your request.');
-                }
-            }
-        });
-
-        async function getChatGPTResponse(userMessage) {
-            try {
-                const response = await fetch(API_URL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${OPENAI_API_KEY}`,
-                    },
-                    body: JSON.stringify({
-                        model: 'gpt-3.5-turbo',
-                        messages: [{ role: 'user', content: userMessage }],
-                    }),
-                });
-
-                const data = await response.json();
-                if (response.ok && data.choices && data.choices[0].message) {
-                    return data.choices[0].message.content;
-                } else {
-                    console.error('Error from OpenAI API:', data);
-                    return null;
-                }
-            } catch (error) {
-                console.error('Error fetching ChatGPT response:', error);
-                return null;
-            }
-        }
-
-        function addMessage(sender, text) {
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('mb-2', sender === 'user' ? 'text-right' : 'text-left');
-            messageElement.innerHTML = `
-                <span class="inline-block p-2 rounded-lg ${sender === 'user' ? 'bg-blue-500 text-white' : 'bg-gray-200'}">
-                    ${text}
-                </span>
-            `;
-            chatMessages.appendChild(messageElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
     </script>
 </body>
 </html>
