--- a/chat-widget.html
+++ b/chat-widget.html
@@ -24,6 +24,7 @@
             <span class="sr-only">Open Chat in New Window</span>
         </a>
         <span class="text-blue-500 font-bold text-sm">ASPD_AURA</span>
+        <span class="text-blue-500 font-bold text-sm">ASPD_AURA TEST</span>
     </div>
 </body>
 </html>
