--- a/chat-widget.html
+++ b/chat-widget.html
@@ -14,16 +14,16 @@
 </head>
 <body class="bg-transparent min-h-screen flex items-center justify-center">
     <div id="chat-widget" class="fixed bottom-1.5 right-3.5 flex flex-col items-center">
+        <span class="text-blue-500 font-bold text-sm mb-2">Chat with AURA</span>
         <a href="https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2" 
            target="_blank" 
            rel="noopener noreferrer"
-           class="inline-flex items-center justify-center w-14 h-14 bg-blue-500 hover:bg-blue-600 text-white rounded-full shadow-lg transition-all duration-200 hover:scale-110 mb-2">
+           class="inline-flex items-center justify-center w-14 h-14 bg-blue-500 hover:bg-blue-600 text-white rounded-full shadow-lg transition-all duration-200 hover:scale-110">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
             </svg>
             <span class="sr-only">Open Chat in New Window</span>
         </a>
-        
     </div>
 </body>
 </html>
