--- a/chat-widget.html
+++ b/chat-widget.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Redirect</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Ensure Tailwind's preflight styles don't interfere with our specific styles */
-        #chat-widget * {
-            box-sizing: border-box;
-        }
-    </style>
-</head>
-<body class="bg-transparent min-h-screen flex items-center justify-center">
-    <div id="chat-widget" class="fixed bottom-20.5 right-3.5 flex flex-col items-center">
-        <span class="text-blue-500 font-bold text-sm mb-2">Chat with AURA</span>
-        <a href="https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2" 
-           target="_blank" 
-           rel="noopener noreferrer"
-           class="inline-flex items-center justify-center w-14 h-14 bg-blue-500 hover:bg-blue-600 text-white rounded-full shadow-lg transition-all duration-200 hover:scale-110">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
-            </svg>
-            <span class="sr-only">Open Chat in New Window</span>
-        </a>
-    </div>
-</body>
-</html>
+<div id="chat-widget" style="position: fixed; bottom: 80px; right: 14px; display: flex; flex-direction: column; align-items: center; font-family: Arial, sans-serif;">
+    <span id="chat-text" style="color: #3b82f6; font-weight: bold; font-size: 0.875rem; margin-bottom: 0.5rem;">Chat with AURA</span>
+    <a href="https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       style="display: inline-flex; align-items: center; justify-content: center; width: 3.5rem; height: 3.5rem; background-color: #3b82f6; color: white; border-radius: 9999px; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); transition: all 0.2s;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
+        </svg>
+        <span style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0;">Open Chat in New Window</span>
+    </a>
+</div>
+
+<script>
+    function animateText() {
+        const text = document.getElementById('chat-text');
+        let time = 0;
+
+        setInterval(() => {
+            time += 0.1;
+            const x = Math.sin(time) * 5; // Horizontal movement
+            const y = Math.cos(time) * 3; // Vertical movement
+            text.style.transform = `translate(${x}px, ${y}px)`;
+        }, 50);
+    }
+
+    animateText();
+</script>
