--- a/chat-widget.html
+++ b/chat-widget.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div id="chat-widget" style="position: fixed; right: 0px; top: 50%; right: 0%; transform: translateX(-50%); display: flex; flex-direction: column; align-items: center; font-family: Arial, sans-serif; z-index: 9999;">
+    <div id="chat-widget" style="position: fixed; right: -5.5%; top: 50%; transform: translateX(-50%); display: flex; flex-direction: column; align-items: center; font-family: Arial, sans-serif; z-index: 9999;">
         <span id="chat-text" style="font-weight: bold; font-size: 0.7rem; margin-bottom: 0.2rem; animation: colorChange 6s infinite linear;">Chat with AURA</span>
         <a href="https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2" 
            target="_blank" 
@@ -42,7 +42,7 @@
 
         function positionWidget() {
             const widget = document.getElementById('chat-widget');
-            const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+            const isMobile = /Android|webOS|iPhone|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
             
             if (isMobile) {
                 widget.style.bottom = '60px'; // Adjust this value as needed for mobile
