--- a/chat_ATRiUM.html
+++ b/chat_ATRiUM.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="chat-widget" style="position: fixed; right: -13.5%; top: 70%; transform: translateX(-50%); display: flex; flex-direction: column; align-items: center; font-family: Arial, sans-serif; z-index: 9999;">
-        <span id="chat-text" style="font-weight: bold; font-size: 0.7rem; margin-bottom: 0.2rem; animation: colorChange 6s infinite linear;">Tutor Beta</span>
+        <span id="chat-text" style="font-weight: bold; font-size: 0.7rem; margin-bottom: 0.2rem; animation: colorChange 6s infinite linear;">AURA BETA</span>
         <a href="https://chatgpt.com/g/g-9kR0G64S4-aura-by-aspd-alpha-v2-2" 
            target="_blank" 
            rel="noopener noreferrer"
